<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0ffffff"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="4"
        android:gravity="bottom"
        >
        <LinearLayout
            android:id="@+id/ll_bt1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="200dp"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/facebook_icon"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fork_pop_bt1"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_mid_dimen"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bt2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="200dp"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/instagram_icon"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fork_pop_bt2"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_mid_dimen"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bt3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="200dp"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/microblog_icon"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fork_pop_bt3"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_mid_dimen"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bt4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="200dp"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/pay_icon"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fork_pop_bt4"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_mid_dimen"
                />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="4"
        android:gravity="bottom"
        >
        <LinearLayout
            android:id="@+id/ll_bt5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="100dp"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/qq_icon"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fork_pop_bt5"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_mid_dimen"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bt6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="100dp"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/wechat_icon"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fork_pop_bt6"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_mid_dimen"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bt7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginBottom="100dp"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/zone_icon"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fork_pop_bt7"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_mid_dimen"
                />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_fork"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        >
        <ImageView
            android:id="@+id/iv_fork"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/add_icon"
            android:layout_centerInParent="true"
            android:layout_marginBottom="5dp"
            />
    </RelativeLayout>
</RelativeLayout>