<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/custom_status_color"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:id="@+id/iv_menu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/menu_icon"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                />
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="标题"
                android:gravity="center"
                android:textSize="@dimen/text_big_dimen"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_below="@id/ll_title"
        android:layout_above="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="5"
        android:background="@color/white"
        >
        <LinearLayout
            android:id="@+id/ll_tab1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="?android:selectableItemBackground"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/iv_tab1"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/heart_icon"
                />
            <TextView
                android:id="@+id/tv_tab1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_tab1"
                android:textSize="@dimen/text_small_dimen"
                android:textColor="@color/tv_tab_color"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_tab2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="?android:selectableItemBackground"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/iv_tab2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/news_icon"
                />
            <TextView
                android:id="@+id/tv_tab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_tab2"
                android:textSize="@dimen/text_small_dimen"
                android:textColor="@color/tv_tab_color"
                />
        </LinearLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            >
            <ImageView
                android:id="@+id/iv_add"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/add_icon"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_tab3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="?android:selectableItemBackground"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/iv_tab3"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/party_icon"
                />
            <TextView
                android:id="@+id/tv_tab3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_tab3"
                android:textSize="@dimen/text_small_dimen"
                android:textColor="@color/tv_tab_color"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_tab4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="?android:selectableItemBackground"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/iv_tab4"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/mine_icon"
                />
            <TextView
                android:id="@+id/tv_tab4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_tab4"
                android:textSize="@dimen/text_small_dimen"
                android:textColor="@color/tv_tab_color"
                />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>